# cpsc7110_fa20

kokkos_test/: .gitignore  CMakeLists.txt  Makefile  README.org  kokkos_test.cpp
matrix_market/: README.org  matrix_market.cpp  mpi_demo.cpp  tiny_matrix.mtx
mpi_kokkos/: CMakeLists.txt  kokkos_mpi_test.cpp
slurm_demo/: readme.org
slurm_demo/src/: hello.c  pi.cpp  sub.sh
